Plurals (#10)
* refactor: made routes plural

* doc: updated swagger with plural routes
