# api/openapi.yaml
@@ -12,7 +12,7 @@ info:
     name: MIT
 basePath: '/'
 paths:
-  '/book':
+  '/books':
     get:
       tags:
         - Book
@@ -54,7 +54,7 @@ paths:
           description: Get the newly created book
           schema:
             '$ref': '#/definitions/Book'
-  '/book/{bookID}':
+  '/books/{bookID}':
     put:
       tags:
         - Book
@@ -100,7 +100,7 @@ paths:
         '200':
           schema:
             '$ref': '#/definitions/Book'
-  '/author':
+  '/authors':
     get:
       tags:
         - Author
@@ -129,7 +129,7 @@ paths:
           description: Get the newly created author
           schema:
             '$ref': '#/definitions/Author'
-  '/author/{authorID}':
+  '/authors/{authorID}':
     put:
       tags:
         - Author
@@ -161,7 +161,7 @@ paths:
         '200':
           schema:
             '$ref': '#/definitions/Author'
-  '/genre':
+  '/genres':
     get:
       tags:
         - Genre
@@ -192,7 +192,7 @@ paths:
         '200':
           schema:
             '$ref': '#/definitions/Genre'
-  '/genre/{GenreID}':
+  '/genres/{GenreID}':
     put:
       tags:
         - Genre
