# api/src/controllers/GenreController.ts
@@ -4,23 +4,23 @@ import { Controller } from '.';
 import { Genre, GenreModel } from 'nivclones-ilog-models';
 
 export const GenreController: Controller = (router: Router) => {
-  router.get('/genre', async (ctx: Context) => {
+  router.get('/genres', async (ctx: Context) => {
     const payload = await GenreModel.find();
     ctx.body = payload;
   });
 
-  router.post('/genre', async (ctx: Context) => {
+  router.post('/genres', async (ctx: Context) => {
     const body: Genre = ctx.request.body;
     ctx.body = await GenreModel.create(body);
   });
 
-  router.put('/genre/:id', async (ctx: Context) => {
+  router.put('/genres/:id', async (ctx: Context) => {
     const body: Genre = ctx.request.body;
     const id: string = ctx.params.id;
     ctx.body = await GenreModel.findByIdAndUpdate(id, body);
   });
 
-  router.delete('/genre/:id', async (ctx: Context) => {
+  router.delete('/genres/:id', async (ctx: Context) => {
     const id: string = ctx.params.id;
     ctx.body = await GenreModel.findByIdAndDelete(id);
   });
